--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-confirmation-code-input",
-  "version": "1.0.1",
+  "name": "rn-confirmation-code-input",
+  "version": "1.0.2",
   "description": "A react-native component to input confirmation code for both Android and IOS",
   "main": "index.js",
   "scripts": {
@@ -23,15 +23,15 @@
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10"
   },
-  "homepage": "https://github.com/ttdung11t2/react-native-confirmation-code-input.git",
+  "homepage": "https://github.com/anchi20/rn-confirmation-code-input.git",
   "bugs": {
     "url": "https://github.com/ttdung11t2/react-native-confirmation-code-input.git/issues",
     "email": "ttdung001@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ttdung11t2/react-native-confirmation-code-input.git"
+    "url": "https://github.com/anchi20/rn-confirmation-code-input.git"
   },
-  "author": "Dung Tran <ttdung001@gmail.com>",
+  "author": "Sanchit",
   "license": "MIT"
 }
